--- a/index.Rmd
+++ b/index.Rmd
@@ -28,17 +28,20 @@ Fernández, L. M., **Hardwicke, T. E.**, & Vadillo, M. A. (preprint). Retracted 
 <a href="https://osf.io/t73rk/" class="btn btn-sm btn-data" role="button">data</a>
 <a href="https://osf.io/t73rk/" class="btn btn-sm btn-code" role="button">analysis-code</a>
 
-Frank, M. C., Braginsky, M., Cachia, J., Coles, N., **Hardwicke, T. E.**, Hawkins, R., Mathur, M., & Williams, R. (in press). Experimentology: An open science approach to experimental psychology methods. MIT Press.  
-<a href="https://doi.org/10.25936/3JP6-5M50" class="btn btn-sm btn-paper" role="button">open access book</a>
+#### 2025
 
-#### 2024
-
-Sandoval-Lentisco, A., Tortajada, M., López-Nicolás, R., López-López, J. A., Wagenmakers, E.J., Sánchez-Meca, J., & **Hardwicke, T. E.** (in press). Preregistration of psychology meta-analyses: A cross-sectional study of prevalence and practice. *Advances in Methods and Practices in Psychological Science*.  
+Sandoval-Lentisco, A., Tortajada, M., López-Nicolás, R., López-López, J. A., Wagenmakers, E.J., Sánchez-Meca, J., & **Hardwicke, T. E.** (2025). Preregistration of psychology meta-analyses: A cross-sectional study of prevalence and practice. *Advances in Methods and Practices in Psychological Science*.  
+<a href="https://doi.org/10.1177/25152459241300113" class="btn btn-sm btn-paper" role="button">paper</a>
 <a href="https://osf.io/preprints/metaarxiv/627a4" class="btn btn-sm btn-preprint" role="button">preprint</a>
 <a href="https://osf.io/rnv5c" class="btn btn-sm btn-prereg" role="button">preregistration</a>
 <a href="https://osf.io/ru5h4/" class="btn btn-sm btn-mat" role="button">materials</a>
 <a href="https://osf.io/ru5h4/" class="btn btn-sm btn-data" role="button">data</a>
 <a href="https://osf.io/ru5h4/" class="btn btn-sm btn-code" role="button">analysis-code</a>
+
+Frank, M. C., Braginsky, M., Cachia, J., Coles, N., **Hardwicke, T. E.**, Hawkins, R., Mathur, M., & Williams, R. (2025). Experimentology: An open science approach to experimental psychology methods. MIT Press.  
+<a href="https://doi.org/10.25936/3JP6-5M50" class="btn btn-sm btn-paper" role="button">open access book</a>
+
+#### 2024
 
 **Hardwicke, T. E.**, Thibault, R. T., Clarke, B., Moodie, N., Crüwell, S., Schiavone, S. R., Handcock, S. A., Nghiem, K. A., Mody, F., Erole, T., & Vazire, S. (2024). Prevalence of transparent research practices in psychology: A cross-sectional study of empirical articles published in 2022. *Advances in Methods and Practices in Psychological Science*.  
 <a href="https://doi.org/10.1177/25152459241283477" class="btn btn-sm btn-paper" role="button">paper</a>
