--- a/index.Rmd
+++ b/index.Rmd
@@ -15,20 +15,20 @@ output:
 
 #### Preprints
 
-Whamond, A., Vazire, S., Clarke, B., Moodie, N., Schiavone, S., Thibault, R. T., **Hardwicke, T. E.** (submitted). How do psychology journals handle post-publication critique? A cross-sectional study of policy and practice.  
-<a href="https://doi.org/10.31234/osf.io/eadhb" class="btn btn-sm btn-preprint" role="button">preprint</a>
-<a href="https://osf.io/nqj7b" class="btn btn-sm btn-prereg" role="button">preregistration</a>
-<a href="https://osf.io/8k7m4/" class="btn btn-sm btn-mat" role="button">materials</a>
-<a href="https://osf.io/8k7m4/" class="btn btn-sm btn-data" role="button">data</a>
-<a href="https://osf.io/8k7m4/" class="btn btn-sm btn-code" role="button">analysis-code</a>
-<a href="https://doi.org/10.24433/CO.4794801.v1" class="btn btn-sm btn-repro" role="button">reproducible-container</a>
-
 Fernández, L. M., **Hardwicke, T. E.**, & Vadillo, M. A. (preprint). Retracted papers clinging on to life: An observational study of post-retraction citations in psychology. *PsyArXiv*.  
 <a href="https://doi.org/hcht" class="btn btn-sm btn-preprint" role="button">preprint</a>
 <a href="https://osf.io/t73rk/" class="btn btn-sm btn-data" role="button">data</a>
 <a href="https://osf.io/t73rk/" class="btn btn-sm btn-code" role="button">analysis-code</a>
 
 #### 2025
+
+Whamond, A., Vazire, S., Clarke, B., Moodie, N., Schiavone, S., Thibault, R. T., **Hardwicke, T. E.** (accepted). How do psychology journals handle post-publication critique? A cross-sectional study of policy and practice. *Advances in Methods and Practices in Psychological Science*.  
+<a href="https://doi.org/10.31234/osf.io/eadhb" class="btn btn-sm btn-preprint" role="button">preprint</a>
+<a href="https://osf.io/nqj7b" class="btn btn-sm btn-prereg" role="button">preregistration</a>
+<a href="https://osf.io/8k7m4/" class="btn btn-sm btn-mat" role="button">materials</a>
+<a href="https://osf.io/8k7m4/" class="btn btn-sm btn-data" role="button">data</a>
+<a href="https://osf.io/8k7m4/" class="btn btn-sm btn-code" role="button">analysis-code</a>
+<a href="https://doi.org/10.24433/CO.4794801.v1" class="btn btn-sm btn-repro" role="button">reproducible-container</a>
 
 Sandoval-Lentisco, A., Tortajada, M., López-Nicolás, R., López-López, J. A., Wagenmakers, E.J., Sánchez-Meca, J., & **Hardwicke, T. E.** (2025). Preregistration of psychology meta-analyses: A cross-sectional study of prevalence and practice. *Advances in Methods and Practices in Psychological Science*. *8*(1).  
 <a href="https://doi.org/10.1177/25152459241300113" class="btn btn-sm btn-paper" role="button">paper</a>
